# ultims

./: .gitignore  docker-compose.yml
be/: Cargo.toml  Dockerfile
be/src/: main.rs
be/src/base/: errors.rs  mod.rs  response.rs  schema_impl.rs  swagger.rs
be/src/handlers/: auth.rs  product.rs
be/src/models/: product.rs  user.rs
be/src/routes/: product.rs
be/src/utils/: db.rs  jwt.rs
fe/: .prettierrc  Dockerfile  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
fe/src/: App.jsx  InitRouter.jsx  main.jsx
fe/src/apis/: auth.jsx  product.jsx
fe/src/constants/: common.jsx  config.jsx  httpStatusCode.jsx  routerPath.jsx
fe/src/context/: appContext.jsx
fe/src/hooks/: index.jsx  useClickOutside.jsx  useGetMenuNavigation.jsx  useRefetchFamilyMember.jsx  useWindowSize.jsx
fe/src/layouts/: AdminLayout.jsx  AdminLayout.less  MainLayout.jsx
fe/src/pages/Introduction/: Introduction.jsx
fe/src/pages/Login/: Login.jsx  Login.less  hook.jsx
fe/src/pages/NotFound/: NotFound.jsx
fe/src/pages/Product/: Product.jsx  hook.jsx  utils.jsx
fe/src/pages/Register/: Register.jsx  hook.jsx
fe/src/pages/VerifyEmail/: VerifyEmail.jsx  hook.js
fe/src/sharedComponents/ActionBar/: ActionBar.jsx  ActionBar.less
fe/src/sharedComponents/AdminMenuNavigation/: AdminMenuNavigation.jsx  AdminMenuNavigation.less
fe/src/sharedComponents/AppBarDivider/: AppBarDivider.jsx
fe/src/sharedComponents/ErrorBoundary/: ErrorBoundary.jsx
fe/src/sharedComponents/Footer/: Footer.jsx  Footer.less
fe/src/utils/: auth.jsx  http.jsx  timeZone.jsx
(+12 files in other folders)
